배포용 브랜치

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "protfolio-blog",
+  "name": "protfolio2-blog",
+  "homepage":"https://koras02.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,8 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "react-scripts build",
-    "deploy": "npm run build && gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
