페이지 수정

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protfolio2-blog",
-  "homepage":"https://koras02.github.io/",
+  "homepage":"https://koras02.github.io/Portfolio2-MyBlog/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
